@@ -3,6 +3,8 @@ Process Hacker
 2.13
  * NEW/IMPROVED:
    * Added copy support to PE viewer
+   * Added Connect Time, Disconnect Time and Last Input Time 
+     to session properties
  * FIXED:
    * Column sort arrows
    * CPU usage calculations
